--- a/style.css
+++ b/style.css
@@ -23,12 +23,13 @@ a {
 
 .header__img {
     margin-left: 10px;
-    margin-top: 10px;
+    margin-top: 2px;
     width: 200px;
 }
 
 .header__menu {
-    margin-right: 30px;
+  margin-top: 10px;
+  margin-right: 30px;
 }
 
 .header__menu ul {
@@ -108,7 +109,27 @@ a {
     color: whitesmoke;
 }
 
+.categories {
+  position: absolute;
+  /*background-color: #43B0FB;*/
+  background: linear-gradient(90deg, rgba(67,176,251,.9), rgba(0,0,0,0));
+  border-radius: 15px;
+  margin-left: 30px;
+  height: 50px;
+  width: 90%;
+  /*outline: red solid 1px;*/
+}
+
+.categories__title {
+  margin-top: 13px;
+}
+
 .carousel {
+  padding: auto;
+  padding-top: 15px;
+}
+
+.carousel__section {
     overflow: scroll;
     padding: 0px 10px;
     position: relative;
@@ -120,27 +141,28 @@ a {
 }
 
 .carousel__container {
-    margin: 50px 0px;
-    padding-bottom: 10px;
+    position: relative;
+    margin: 70px 0px 20px 0px;
+    margin-left: 20px;
     white-space: nowrap;
 }
 
 .carousel-item {
-    background-color: turquoise;
+    background-color: #43B0FB;
     border-radius: 30px;
     cursor: pointer;
     display: inline-block;
     height: 250px;
-    margin-right: 10px;
+    margin-right: 20px;
     overflow: hidden;
     position: relative;
     transition: 300ms all;
     transform-origin: center left;
-    width: 200px;
+    width: 400px;
 }
 
 .carousel-item:hover ~ .carousel-item {
-    transform: translate3d(100px, 0, 0);
+    transform: translate3d(20px, 0, 0);
 }
 
 .carousel__container:hover .carousel-item {
@@ -149,12 +171,12 @@ a {
 
 .carousel__container:hover .carousel-item:hover {
     opacity: 1;
-    transform: scale(1.3);
+    transform: scale(1.1);
 }
 
 .carousel-item__img {
     height: 100%;
-    object-fit: cover ;
+    object-fit: cover;
     width: 100%;
 }
 
@@ -191,10 +213,15 @@ a {
 
 .categories__title {
     color: whitesmoke;
-    font-size: 16px;
+    font-size: 20px;
     position: absolute;
     padding-left: 30px;
     width: 100%;
+}
+
+.footer {
+  display: flex;
+  width: 100%;
 }
 
 .footer ul {
